Fri, Jun 23, 2023, 7:41 PM -04:00

--- a/cs50/finance/templates/index.html
+++ b/cs50/finance/templates/index.html
@@ -16,7 +16,8 @@
         </tr>
     </thead>
    <tbody>
-
+    {% for stock in stocks %}
+    {{ stock["]}}
     </tbody>
     <tfoot>
         <tr>
