--- a/cs50/finance/templates/index.html
+++ b/cs50/finance/templates/index.html
@@ -17,7 +17,10 @@
     </thead>
    <tbody>
     {% for stock in stocks %}
-    {{ stock["]}}
+    {{ stock["symbol"]}}
+    {{ stock["price"]}}
+    {{ stock["shares"]}}
+    {{ stock["symbol"]}}
     </tbody>
     <tfoot>
         <tr>
