--- a/cs50/finance/templates/index.html
+++ b/cs50/finance/templates/index.html
@@ -15,21 +15,25 @@
             <th class="text-end">TOTAL</th>
         </tr>
     </thead>
-   <tbody>
-    {% for stock in stocks %}
-        {{ stock["symbol"]}}
-        {{ stock["price"]}}
-        {{ stock["shares"]}}
-        {{ stock["symbol"]}}
+    <tbody>
+        {% for purchase in purchases %}
+        <tr>
+            <td class="text-start">{{ purchase["symbol"] }}</td>
+            <td class="text-start">{{ purchase["name"] }}</td>
+            <td class="text-end">{{ purchase["shares"] }}</td>
+            <td class="text-end">{{ purchase["price"]|usd }}</td>
+            <td class="text-end">{{ purchase["total"]|usd }}</td>
+        </tr>
+        {% endfor %}
     </tbody>
     <tfoot>
         <tr>
             <td class="border-0 fw-bold text-end" colspan="4">Cash</td>
-            <td class="border-0 text-end">$10,000.00</td>
+            <td class="border-0 text-end">{{ cash|usd }}</td>
         </tr>
         <tr>
             <td class="border-0 fw-bold text-end" colspan="4">TOTAL</td>
-            <td class="border-0 w-bold text-end">$10,000.00</td>
+            <td class="border-0 fw-bold text-end">{{ total_value|usd }}</td>
         </tr>
     </tfoot>
 </table>
