Fri, Jun 23, 2023, 8:30 PM -04:00

--- a/cs50/finance/templates/buy.html
+++ b/cs50/finance/templates/buy.html
@@ -28,7 +28,7 @@
                 <label for="exampleFormControlInput1" class="form-label">Shares</label>
                 <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" name="shares" placeholder="1">
             </div>
-            <button class="btn btn-primary" type="submit">Search</button>
+            <button class="btn btn-primary" type="submit">BUY NOW</button>
         </form>
 
     </div>
