Fri, Jun 23, 2023, 8:35 PM -04:00

--- a/cs50/finance/templates/index.html
+++ b/cs50/finance/templates/index.html
@@ -18,7 +18,7 @@
     <tbody>
         {% for purchase in purchases %}
         <tr>
-            <td class="text-start">{{ purchase["symbol"] }}</td>
+            <td >class="text-start"{{ purchase["symbol"] }}</td>
             <td class="text-start">{{ purchase["name"] }}</td>
             <td class="text-end">{{ purchase["shares"] }}</td>
             <td class="text-end">{{ purchase["price"]|usd }}</td>
