--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <select class="form-select" aria-label="Default select example">
+    <select class="form-select-sm" aria-label="Default select example">
         <option selected>Open this select menu</option>
         <option value="1">One</option>
         <option value="2">Two</option>
