--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -6,10 +6,11 @@
 
 {% block main %}
     <select class="form-select-sm" aria-label="Default select example">
-        <option selected>Open this select menu</option>
+        <option selected disabled>Symbol</option>
+
+        {% for every stock in stocks %}
         <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
+        {% endfor %}
     </select>
 
 {% endblock %}
