Sun, Jun 25, 2023, 6:30 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -11,6 +11,9 @@
         {% for every stock in stocks %}
         <option value="1">One</option>
         {% endfor %}
+
     </select>
+    
+    <form action="/buy" method="post"></form>
 
 {% endblock %}
