--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -13,7 +13,9 @@
         {% endfor %}
 
     </select>
-    
-    <form action="/buy" method="post"></form>
+
+    <form action="/buy" method="post">
+        <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" name="shares" placeholder="1">
+    </form>
 
 {% endblock %}
