Sun, Jun 25, 2023, 6:50 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -8,7 +8,7 @@
     <select class="form-select-sm" aria-label="Default select example">
         <option selected disabled>Symbol</option>
 
-        {% for every purhcase in purchases %}
+        {% for every purchase in purchases %}
         <option value="1">{purchase["symbol"]}</option>
         {% endfor %}
 
