Sun, Jun 25, 2023, 6:53 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -9,7 +9,7 @@
         <option selected disabled>Symbol</option>
 
         {% for every purchase in purchases %}
-        <option value="1">{purchase["symbol"]}</option>
+        <option value="1">{{ purchase["symbol"] }}</option>
         {% endfor %}
 
     </select>
