Sun, Jun 25, 2023, 7:11 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -6,11 +6,11 @@
 
 {% block main %}
 <h1>Sell Stock</h1>
-    <select class="form-select-sm" aria-label="Default select example">
+    <select class="form-select-sm" aria-label="Default select example" name="symbol">
         <option selected disabled>Symbol</option>
 
         {% for purchase in purchases %}
-        <option value="1">{{ purchase["symbol"] }}</option>
+        <option>{{ purchase["symbol"] }}</option>
         {% endfor %}
 
     </select>
