Sun, Jun 25, 2023, 7:24 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -10,7 +10,7 @@
         <option selected disabled>Symbol</option>
 
         {% for symbol in symbols %}
-            <option>{{ purchase["symbol"] }}</option>
+            <option>{{ symbol }}</option>
         {% endfor %}
 
     </select>
