Sun, Jun 25, 2023, 7:35 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -17,8 +17,8 @@
 
     <p></p>
 
-    <form action="/buy" method="post">
-        <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" name="shares" placeholder="1">
+    <form action="/buy" method="post" name="shares">
+        <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" placeholder="1">
     <p></p>
         <button class="btn btn-primary" type="submit">Sell</button>
     </form>
