Sun, Jun 25, 2023, 7:45 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -9,8 +9,8 @@
     <select class="form-select-sm" aria-label="Default select example" name="symbol">
         <option selected disabled>Symbol</option>
 
-        {% for purchase in purchases %}
-        <option>{{ symbol }}</option>
+        {% for symbol in symbols %}
+        <option>{{ symbols }}</option>
         {% endfor %}
 
     </select>
