--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -9,8 +9,8 @@
     <select class="form-select-sm" aria-label="Default select example" name="symbol">
         <option selected disabled>Symbol</option>
 
-        {% for symbol in symbols %}
-        <option>{{ symbols }}</option>
+        {% for purchase in purchases %}
+        <option>{{ purchase["symbols"] }}</option>
         {% endfor %}
 
     </select>
