Sun, Jun 25, 2023, 8:02 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -9,7 +9,7 @@
     <select class="form-select-sm" aria-label="Default select example" name="symbol">
         <option selected disabled>Symbol</option>
 
-        {% for purchase in purchases %}
+        {% for symbol in symbols %}
         <option>{{ symbols }}</option>
         {% endfor %}
 
