Sun, Jun 25, 2023, 8:06 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -9,8 +9,8 @@
     <select class="form-select-sm" aria-label="Default select example" name="symbol">
         <option selected disabled>Symbol</option>
 
-        {% for symbol in symbols %}
-        <option>{{ symbols }}</option>
+        {% for stock in stocks %}
+        <option>{{ stock. }}</option>
         {% endfor %}
 
     </select>
