Sun, Jun 25, 2023, 8:14 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -10,7 +10,7 @@
         <option selected disabled>Symbol</option>
 
         {% for stock in stocks %}
-        <option>{{ stock }}</option>
+        <option>{{ stock['symbol'] }}</option>
         {% endfor %}
 
     </select>
