--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -9,8 +9,8 @@
     <select class="form-select-sm" aria-label="Default select example" name="symbol">
         <option selected disabled>Symbol</option>
 
-        {% for stock in stocks %}
-        <option>{{ stock['symbol'] }}</option>
+        {% for share in shares %}
+        <option>{{ share['symbol'] }}</option>
         {% endfor %}
 
     </select>
