Sat, Jul 1, 2023, 1:49 PM -04:00

--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -17,7 +17,7 @@
 
     <p></p>
 
-    <form action="/buy" method="post" name="shares">
+    <form action="/sell" method="post" name="shares">
         <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" placeholder="1">
     <p></p>
         <button class="btn btn-primary" type="submit">Sell</button>
