--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -17,8 +17,8 @@
 
     <p></p>
 
-    <form action="/sell" method="post" name="shares">
-        <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" placeholder="1">
+    <form action="/sell" method="post">
+        <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" placeholder="1" name="shares">
     <p></p>
         <button class="btn btn-primary" type="submit">Sell</button>
     </form>
