--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -6,7 +6,8 @@
 
 {% block main %}
 <h1>Sell Stock</h1>
-    <select class="form-select-sm" aria-label="Default select example" name="symbol">
+<form action="sell" method="post" >
+    <select  class="form-select-sm" aria-label="Default select example" name="symbol">
         <option selected disabled>Symbol</option>
 
         {% for share in shares %}
@@ -17,10 +18,11 @@
 
     <p></p>
 
-    <form action="/sell" method="post">
+    <form >
         <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" placeholder="1" name="shares">
     <p></p>
         <button class="btn btn-primary" type="submit">Sell</button>
     </form>
+</form>
 
 {% endblock %}
