Sat, Jul 8, 2023, 8:55 PM -04:00

--- a/cs50/finance/templates/history.html
+++ b/cs50/finance/templates/history.html
@@ -15,7 +15,7 @@
         </tr>
     </thead>
     <tbody>
-        
+
         {% for purchase in purchases %}
         <tr>
             <td class="text-start">{{ purchase["symbol"] }}</td>
@@ -24,3 +24,5 @@
             <td class="text-end">{{ purchase["price"]|usd }}</td>
         </tr>
         {% endfor %}
+        
+{% endblock %}
