Sat, Jul 8, 2023, 8:58 PM -04:00

--- a/cs50/finance/templates/history.html
+++ b/cs50/finance/templates/history.html
@@ -9,9 +9,9 @@
     <thead>
         <tr>
             <th class="text-start">Symbol</th>
-            <th class="text-start">Name</th>
             <th class="text-end">Shares</th>
             <th class="text-end">Price</th>
+            <th class="text-start">Transacted</th>
         </tr>
     </thead>
     <tbody>
@@ -19,10 +19,10 @@
         {% for purchase in purchases %}
         <tr>
             <td class="text-start">{{ purchase["symbol"] }}</td>
-            <td class="text-start">{{ purchase["name"] }}</td>
-            <td class="text-end">{{ purchase["shares"] }}</td>
-            <td class="text-end">{{ purchase["price"]|usd }}</td>
+            <td class="text-start">{{ purchase["shares"] }}</td>
+            <td class="text-end">{{ purchase["price"] }}</td>
+            <td class="text-end">{{ purchase["timestamp"]|usd }}</td>
         </tr>
         {% endfor %}
-        
+</table>
 {% endblock %}
