--- a/cs50/finance/templates/history.html
+++ b/cs50/finance/templates/history.html
@@ -21,7 +21,7 @@
             <td class="text-start">{{ purchase["symbol"] }}</td>
             <td class="text-start">{{ purchase["shares"] }}</td>
             <td class="text-end">{{ purchase["price"] }}</td>
-            <td class="text-end">{{ purchase["timestamp"]|usd }}</td>
+            <td class="text-end">{{ purchase["timestamp"] }}</td>
         </tr>
         {% endfor %}
 </table>
