Mon, Jul 10, 2023, 7:32 PM -04:00

--- a/cs50/finance/templates/history.html
+++ b/cs50/finance/templates/history.html
@@ -19,7 +19,7 @@
         {% for purchase in rows %}
         <tr>
             <td class="text-start">{{ purchase["symbol"] }}</td>
-            <td class="text-start">{{ purchase["shares"] }}</td>
+            <td class="text-start">{{ purchase["shares"] if purchase["shares_bought"] > 0 else -purchase["shares"]  }}</td>
             <td class="text-end">{{ purchase["price"] }}</td>
             <td class="text-end">{{ purchase["timestamp"] }}</td>
         </tr>
