Mon, Jul 10, 2023, 8:50 PM -04:00

--- a/cs50/finance/templates/account.html
+++ b/cs50/finance/templates/account.html
@@ -5,19 +5,20 @@
 {% endblock %}
 
 {% block main %}
-    <h3>User: {{ name }}</h3>
+    <h3>User: {{ name[0]['username'] }}</h3>
+    <p></p>
     <form action="/account" method="post">
-        <h3>Create Your Login Details</h3>
+        <h5>Change password</h5>
         <p></p>
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Create Username" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="old_pass" name="old_pass" placeholder="Old Password" type="password">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Create Password" type="password">
+            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="New Password" type="password">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Confirm Password" type="password">
+            <input class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Confirm New Password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-primary" type="submit">Change</button>
     </form>
 {% endblock %}
