Mon, Jul 10, 2023, 8:57 PM -04:00

--- a/cs50/finance/templates/account.html
+++ b/cs50/finance/templates/account.html
@@ -11,10 +11,10 @@
         <h5>Change password</h5>
         <p></p>
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="old_pass" name="old_pass" placeholder="Old Password" type="password">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="password" name="old_pass" placeholder="Old Password" type="password">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="New Password" type="password">
+            <input class="form-control mx-auto w-auto" id="password" name="new_pass" placeholder="New Password" type="password">
         </div>
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Confirm New Password" type="password">
