Wed, Jul 12, 2023, 10:39 AM -04:00

--- a/cs50/finance/templates/login.html
+++ b/cs50/finance/templates/login.html
@@ -15,4 +15,7 @@
         </div>
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
+    <form action="/register" method="get">
+        <button class="btn btn-primary" type="submit">Register</button>
+    </form>
 {% endblock %}
