--- a/cs50/finance/templates/account.html
+++ b/cs50/finance/templates/account.html
@@ -21,4 +21,12 @@
         </div>
         <button class="btn btn-primary" type="submit">Change</button>
     </form>
+    {% if flash_messages %}
+    <div class="alert alert-primary mb-0 text-center" role="alert">
+        {% for message in flash_messages %}
+            {{ message }}
+        {% endfor %}
+    </div>
+    {% endif %}
+
 {% endblock %}
