--- a/cs50/finance/templates/login.html
+++ b/cs50/finance/templates/login.html
@@ -15,7 +15,8 @@
         </div>
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
+    No account?
     <form action="/register" method="get">
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-primary" type="submit">Register Here</button>
     </form>
 {% endblock %}
