Wed, Jul 12, 2023, 11:18 AM -04:00

--- a/cs50/finance/templates/password_success.html
+++ b/cs50/finance/templates/password_success.html
@@ -2,7 +2,7 @@
     <div class="alert alert-primary" role="alert">
         <ul>
             {% for message in flash_messages %}
-                <li>{{ message }}</li>
+                <h1>{{ message }}</h1>
             {% endfor %}
         </ul>
     </div>
