Wed, Jul 12, 2023, 11:21 AM -04:00

--- a/cs50/finance/templates/quote.html
+++ b/cs50/finance/templates/quote.html
@@ -10,7 +10,7 @@
     <div class="mb-3">
         <form action="/quote" method="post">
             <label for="exampleFormControlInput1" class="form-label">Stock Symbol</label>
-            <input name=symbol class="form-control-sm" list="datalistOptions" class="italic-placeholder" id="exampleDataList" placeholder="<i>Ex: TSLA</i>">
+            <input name=symbol class="form-control-sm" list="datalistOptions" class="italic" id="exampleDataList" placeholder="Ex: TSLA">
             <datalist id="datalistOptions">
                 <option value="NFLX">
                 <option value="AAPL">
