--- a/cs50/finance/static/styles.css
+++ b/cs50/finance/static/styles.css
@@ -22,7 +22,7 @@ nav .navbar-brand .green
     color: #2e944b;
 }
 
-.italic-placeholder {
+.italic:placeholder-shown {
     font-style: italic;
-  }
+ }
 
