Wed, Jul 12, 2023, 11:25 AM -04:00

--- a/cs50/finance/static/styles.css
+++ b/cs50/finance/static/styles.css
@@ -22,7 +22,7 @@ nav .navbar-brand .green
     color: #2e944b;
 }
 
-.italic:placeholder-shown {
+input:placeholder-shown {
     font-style: italic;
  }
 
