--- a/cs50/finance/templates/sell.html
+++ b/cs50/finance/templates/sell.html
@@ -19,7 +19,7 @@
     <p></p>
 
     <form >
-        <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" placeholder="1" name="shares">
+        <input type="number" min="1" class="form-control-sm" id="exampleFormControlInput1" placeholder="Ex: 1" name="shares">
     <p></p>
         <button class="btn btn-primary" type="submit">Sell</button>
     </form>
