Wed, Jul 12, 2023, 11:46 AM -04:00

--- a/cs50/finance/templates/password_success.html
+++ b/cs50/finance/templates/password_success.html
@@ -3,6 +3,9 @@
         <ul>
             {% for message in flash_messages %}
                 <h1>{{ message }}</h1>
+                <script>
+                    setTimeout, 2000
+                </script>
             {% endfor %}
         </ul>
     </div>
