Wed, Jul 12, 2023, 1:43 PM -04:00

--- a/cs50/finance/templates/quoted.html
+++ b/cs50/finance/templates/quoted.html
@@ -9,7 +9,7 @@
         <h1>{{ stock.name }}</h1>
         <p></p>
         <div class="price-container">
-            <p>Price: ${{ stock.price }}</p>
+            <h3>Price: ${{ stock.price }}</h3>
         </div>
     <p></p>
     <form action="/quote" method="get">
