Wed, Jul 12, 2023, 4:00 PM -04:00

--- a/cs50/finance/templates/login.html
+++ b/cs50/finance/templates/login.html
@@ -16,7 +16,7 @@
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
     <p></p>
-    No account?
+    New User:
     <form action="/register" method="get">
         <button class="btn btn-primary" type="submit">Register Here</button>
     </form>
